// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TextInput Component renders with default prompt 1`] = `
">
\x1B[?25l"
`;

exports[`TextInput Component renders with custom prompt 1`] = `
"$
\x1B[?25l"
`;

exports[`TextInput Component renders with placeholder 1`] = `
"> Type something...
\x1B[?25l"
`;

exports[`TextInput Component renders with controlled value 1`] = `
"> Hello
\x1B[?25l"
`;

exports[`TextInput Component renders without cursor when not focused 1`] = `
">
\x1B[?25l"
`;
